syntax = "proto3";

option go_package = "github.com/WEGOAPP/clientapi/protos/publish";

package publish;

message PublishBlock {
    string Name = 1;
    string CNPJ = 2;
    string Content = 3;
    int64 TimeStp = 4;
}

message Done{
    int32 Status = 1;
}

service PublishService {
    rpc PublishRequest(PublishBlock) returns(Done){}
}